Première version de index.html (sans animations)

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <p><b>La palette du goût</b></p>
                     <p>Ménilmontant</p>
                 </div>
+                </a>
+                
+                <a href="#">
                 <div class="resto-card">
                     <img src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
                     <p><b>La note enchantée</b></p>
