--- a/index.html
+++ b/index.html
@@ -5,47 +5,51 @@
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
     <title>OhMyFood</title>
 </head>
 <body>
     <header>
-        <img src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+        <div id="header-logo">
+        <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+        </div>
     </header>
     <main>
         <!-- Section 1/3 -->
         <section>
             <div id="location">
-                <i></i> <!--icone GPS-->
+                <i class="fa-solid fa-location-dot"></i> <!--icone GPS-->
                 <p>Paris, Belleville</p>
             </div>
-            <div id="main header">
-                <h1>Réservez le menu qui vous convient</h1>
+            <div id="main-header">
+                <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <div>
                 <button>Explorer nos restaurants</button>
+                </div>
             </div>
         </section>
 
         <!-- Section 2/3 -->
         <section>
             <div id="fonctionnement">
-                <h1>Fonctionnement</h1>
+                <h2>Fonctionnement</h2>
                 <div class="steps">
                     <p class="number">1</p>
-                    <i></i>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
                     <p>Choisissez votre restaurant</p>
                 </div>
                 <div class="steps">
                     <p class="number">2</p>
-                    <i></i>
+                    <i class="fa-solid fa-bars"></i>
                     <p>Composez votre menu</p>
                 </div>
                 <div class="steps">
                     <p class="number">3</p>
-                    <i></i>
+                    <i class="fa-solid fa-store"></i>
                     <p>Dégustez au restaurant</p>
                 </div>
             </div>
@@ -54,42 +58,70 @@
         <!-- Section 3/3 -->
         <section>
             <div id="restaurants">
-                <h1>Restaurants</h1>
-                <div class="resto-card">
-                    <img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-                    <p><b>La palette du goût</b></p>
-                    <p>Ménilmontant</p>
-                </div>
-                </a>
-                
+                <h2>Restaurants</h2>
                 <a href="#">
                 <div class="resto-card">
-                    <img src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
+                    <div class="card-img-div">
+                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                    </div>
+                    <div class="textcontainer">
+                    <p><b>La palette du goût</b></p>
+                    <p>Ménilmontant</p>
+                    <i class="fa-regular fa-heart"></i>
+                    </div>
+                </div>
+                </a>
+
+                <a href="#">
+                <div class="resto-card">
+                    <div class="card-img-div">
+                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
+                    </div>
+                    <div class="textcontainer">
                     <p><b>La note enchantée</b></p>
                     <p>Charonne</p>
+                    <i class="fa-regular fa-heart"></i>
+                    </div>
                 </div>
+                </a>
+
+                <a href="#">
                 <div class="resto-card">
-                    <img src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                    <div class="card-img-div">
+                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                    </div>
+                    <div class="textcontainer">
                     <p><b>A la française</b></p>
                     <p>Cité Rouge</p>
+                    <i class="fa-regular fa-heart"></i>
+                    </div>
                 </div>
+                </a>
+
+                <a href="#">
                 <div class="resto-card">
-                    <img src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                    <div class="card-img-div">
+                    <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                    </div>
+                    <div class="textcontainer">
                     <p><b>Le délice des sens</b></p>
                     <p>Folie-Méricourt</p>
+                    <i class="fa-regular fa-heart"></i>
+                    </div>
                 </div>
+                </a>
             </div>
         </section>
     </main>
 
     <footer>
-        <img src="" alt="Logo small">
-        <div>
-            <i></i> <!--icone fourchette-->
+        <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
+        <div class="footerdiv">
+            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
             <p>Proposer un restaurant</p>
         </div>
-        <div>
-            <i></i> <!--icone serrage de mains-->
+        <div class="footerdiv">
+            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
