--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <div>
-                <button>Explorer nos restaurants</button>
+                <button class="btn">Explorer nos restaurants</button>
                 </div>
             </div>
         </section>
@@ -59,7 +59,7 @@
         <section>
             <div id="restaurants">
                 <h2>Restaurants</h2>
-                <a href="#">
+                <a href="menu1.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
@@ -72,7 +72,7 @@
                 </div>
                 </a>
 
-                <a href="#">
+                <a href="menu2.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
@@ -85,20 +85,20 @@
                 </div>
                 </a>
 
-                <a href="#">
+                <a href="menu3.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
                     </div>
                     <div class="textcontainer">
-                    <p><b>A la française</b></p>
+                    <p><b>À la française</b></p>
                     <p>Cité Rouge</p>
                     <i class="fa-regular fa-heart"></i>
                     </div>
                 </div>
                 </a>
 
-                <a href="#">
+                <a href="menu4.html">
                 <div class="resto-card">
                     <div class="card-img-div">
                     <img class="card-img" src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
