--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
