--- a/menu1.html
+++ b/menu1.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     </header>
-    <main>
+    <main id="menu-main">
         <div class="menu-img">
         <img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
         </div>
@@ -145,6 +145,6 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
