--- a/menu2.html
+++ b/menu2.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     </header>
-    <main>
+    <main id="menu-main">
         <div class="menu-img">
         <img src="Maquettes Ohmyfood\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg">
         </div>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Ravioles de foie gras</b></p>
+                    <p class="item-name"><b>Ravioles de foie gras</b></p>
                     <p>Accompagnés de leur crème à la truffe</p>
                     </div>
                     <div class="container-price">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Caviar osciètre</b></p>
+                    <p class="item-name"><b>Caviar osciètre</b></p>
                     <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="container-price">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Homard et espuma de potiron</b></p>
+                    <p class="item-name"><b>Homard et espuma de potiron</b></p>
                     <p>Mariné aux zestes d'orange</p>
                     </div>
                     <div class="container-price">
@@ -68,7 +68,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Foie gras de canard cuit entier</b></p>
+                    <p class="item-name"><b>Foie gras de canard cuit entier</b></p>
                     <p>Confiture de figue et pain toasté</p>
                     </div>
                     <div class="container-price">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Noix de coquilles Saint-Jacques</b></p>
+                    <p class="item-name"><b>Noix de coquilles Saint-Jacques</b></p>
                     <p>Sur lit de purée de céleri-rave</p>
                     </div>
                     <div class="container-price">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Langoustine poêlée</b></p>
+                    <p class="item-name"><b>Langoustine poêlée</b></p>
                     <p>Purée de patate douce</p>
                     </div>
                     <div class="container-price">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Mijoté de queue de boeuf </b></p>
+                    <p class="item-name"><b>Mijoté de queue de boeuf </b></p>
                     <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="container-price">
@@ -114,7 +114,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Macaron noisette et chocolat</b></p>
+                    <p class="item-name"><b>Macaron noisette et chocolat</b></p>
                     <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="container-price">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Baba au rhum revisité </b></p>
+                    <p class="item-name"><b>Baba au rhum revisité </b></p>
                     <p>Avec son coulis de citron</p>
                     </div>
                     <div class="container-price">
@@ -132,7 +132,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Tarte au citron meringuée</b></p>
+                    <p class="item-name"><b>Tarte au citron meringuée</b></p>
                     <p>Déstructurée</p>
                     </div>
                     <div class="container-price">
@@ -154,6 +154,6 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
