--- a/menu4.html
+++ b/menu4.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     </header>
-    <main>
+    <main id="menu-main">
         <div class="menu-img">
         <img src="Maquettes Ohmyfood\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
         </div>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Tartare de thon</b></p>
+                    <p class="item-name"><b>Tartare de thon</b></p>
                     <p>Assaisonné au yuzu</p>
                     </div>
                     <div class="container-price">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Bouchée de homard croustillant </b></p>
+                    <p class="item-name"><b>Bouchée de homard croustillant </b></p>
                     <p>Et sa farandole de petits légumes</p>
                     </div>
                     <div class="container-price">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Velouté de cèpes </b></p>
+                    <p class="item-name"><b>Velouté de cèpes </b></p>
                     <p>Aux truffes</p>
                     </div>
                     <div class="container-price">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Poulet rôti aux herbes de Provence</b></p>
+                    <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
                     <p>Et sa crème de truffe</p>
                     </div>
                     <div class="container-price">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Langouste rôtie</b></p>
+                    <p class="item-name"><b>Langouste rôtie</b></p>
                     <p>Et ses légumes de saison</p>
                     </div>
                     <div class="container-price">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Côte de boeuf Angus</b></p>
+                    <p class="item-name"><b>Côte de boeuf Angus</b></p>
                     <p>Et sa purée de panais</p>
                     </div>
                     <div class="container-price">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Farandole de desserts</b></p>
+                    <p class="item-name"><b>Farandole de desserts</b></p>
                     <p>Du chef</p>
                     </div>
                     <div class="container-price">
@@ -114,7 +114,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Crème brulée</b></p>
+                    <p class="item-name"><b>Crème brulée</b></p>
                     <p>Revisitée</p>
                     </div>
                     <div class="container-price">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Tiramisu</b></p>
+                    <p class="item-name"><b>Tiramisu</b></p>
                     <p>À la noisette</p>
                     </div>
                     <div class="container-price">
@@ -145,6 +145,6 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
