--- a/menu3.html
+++ b/menu3.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     </header>
-    <main>
+    <main id="menu-main">
         <div class="menu-img">
         <img src="Maquettes Ohmyfood\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg">
         </div>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Tartare de poulpe acidulé</b></p>
+                    <p class="item-name"><b>Tartare de poulpe acidulé</b></p>
                     <p>Aux zestes d'orange</p>
                     </div>
                     <div class="container-price">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Velouté de légumes d'antan</b></p>
+                    <p class="item-name"><b>Velouté de légumes d'antan</b></p>
                     <p>Carotte, panais, topinambour</p>
                     </div>
                     <div class="container-price">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Soupe à l'oignon</b></p>
+                    <p class="item-name"><b>Soupe à l'oignon</b></p>
                     <p>Revisitée</p>
                     </div>
                     <div class="container-price">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Coquilles Saint-Jacques</b></p>
+                    <p class="item-name"><b>Coquilles Saint-Jacques</b></p>
                     <p>Accompagnées d'une purée de panais</p>
                     </div>
                     <div class="container-price">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Magret de canard</b></p>
+                    <p class="item-name"><b>Magret de canard</b></p>
                     <p>Et parmentier de pommes de terre</p>
                     </div>
                     <div class="container-price">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Pigeonneau d’Ille-et-Vilaine</b></p>
+                    <p class="item-name"><b>Pigeonneau d’Ille-et-Vilaine</b></p>
                     <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <div class="container-price">
@@ -105,25 +105,25 @@
                 </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Pétales de violettes glacés</b></p>
+                    <p class="item-name"><b>Pétales de violettes glacés</b></p>
                     <p>Et purée de noisettes</p>
                     </div>
                     <div class="container-price">
-                        <p class="prix"></p>
+                        <p class="prix">18€</p>
   
 </div>                  </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Fondant au chocolat</b></p>
+                    <p class="item-name"><b>Fondant au chocolat</b></p>
                     <p>Revisité</p>
                     </div>
                     <div class="container-price">
-                        <p class="prix"></p>
+                        <p class="prix">22€</p>
   
 </div>                  </div>
                 <div class="menu-item">
                     <div class="container-name">
-                    <p><b>Millefeuille croustillant</b></p>
+                    <p class="item-name"><b>Millefeuille croustillant</b></p>
                     <p>Myrtilles et pâte d’amande</p>
                     </div>
                     <div class="container-price">
@@ -145,6 +145,6 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
