Animation coeur de l'index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
                     <div class="textcontainer">
                     <p><b>La palette du goût</b></p>
                     <p>Ménilmontant</p>
+                    <div class="heartbase">
                     <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg">
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
                     </div>
                 </div>
                 </a>
@@ -80,7 +85,12 @@
                     <div class="textcontainer">
                     <p><b>La note enchantée</b></p>
                     <p>Charonne</p>
+                    <div class="heartbase">
                     <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg">
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
                     </div>
                 </div>
                 </a>
@@ -93,7 +103,12 @@
                     <div class="textcontainer">
                     <p><b>À la française</b></p>
                     <p>Cité Rouge</p>
+                    <div class="heartbase">
                     <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg">
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
                     </div>
                 </div>
                 </a>
@@ -106,7 +121,12 @@
                     <div class="textcontainer">
                     <p><b>Le délice des sens</b></p>
                     <p>Folie-Méricourt</p>
+                    <div class="heartbase">
                     <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg">
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
                     </div>
                 </div>
                 </a>
