--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <title>OhMyFood</title>
 </head>
 <body>
+    <!-- Loading spinner -->
+    <div id="overlay">
+        <div class="load">
+            <div class="load__bar load__bar--1"></div>
+            <div class="load__bar load__bar--2"></div>
+            <div class="load__bar load__bar--3"></div>
+            <div class="load__bar load__bar--4"></div>
+            <div class="load__bar load__bar--5"></div>
+        </div>
+    </div>
+    <!-- Header -->
     <header>
         <div id="header-logo">
         <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
