Animation apparition progressive des menus

--- a/menu2.html
+++ b/menu2.html
@@ -34,12 +34,12 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
 
-            <div class="menu-section">
+            <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--1">
                     <div class="container-name">
                     <p class="item-name"><b>Ravioles de foie gras</b></p>
                     <p>Accompagnés de leur crème à la truffe</p>
@@ -48,7 +48,7 @@
                         <p class="prix">25€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--2">
                     <div class="container-name">
                     <p class="item-name"><b>Caviar osciètre</b></p>
                     <p>Sur blini à la farine de blé noir</p>
@@ -57,7 +57,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--3">
                     <div class="container-name">
                     <p class="item-name"><b>Homard et espuma de potiron</b></p>
                     <p>Mariné aux zestes d'orange</p>
@@ -66,7 +66,7 @@
                         <p class="prix">20€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--4">
                     <div class="container-name">
                     <p class="item-name"><b>Foie gras de canard cuit entier</b></p>
                     <p>Confiture de figue et pain toasté</p>
@@ -75,12 +75,13 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--5">
                     <div class="container-name">
                     <p class="item-name"><b>Noix de coquilles Saint-Jacques</b></p>
                     <p>Sur lit de purée de céleri-rave</p>
@@ -89,7 +90,7 @@
                         <p class="prix">40€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--6">
                     <div class="container-name">
                     <p class="item-name"><b>Langoustine poêlée</b></p>
                     <p>Purée de patate douce</p>
@@ -98,7 +99,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--7">
                     <div class="container-name">
                     <p class="item-name"><b>Mijoté de queue de boeuf </b></p>
                     <p>Et riz sauvage aux zestes de citron</p>
@@ -107,12 +108,13 @@
                         <p class="prix">44€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--8">
                     <div class="container-name">
                     <p class="item-name"><b>Macaron noisette et chocolat</b></p>
                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -121,7 +123,7 @@
                         <p class="prix">18€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--9">
                     <div class="container-name">
                     <p class="item-name"><b>Baba au rhum revisité </b></p>
                     <p>Avec son coulis de citron</p>
@@ -130,7 +132,7 @@
                         <p class="prix">22€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--10">
                     <div class="container-name">
                     <p class="item-name"><b>Tarte au citron meringuée</b></p>
                     <p>Déstructurée</p>
