--- a/menu3.html
+++ b/menu3.html
@@ -34,12 +34,12 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
 
-            <div class="menu-section">
+            <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--1">
                     <div class="container-name">
                     <p class="item-name"><b>Tartare de poulpe acidulé</b></p>
                     <p>Aux zestes d'orange</p>
@@ -48,7 +48,7 @@
                         <p class="prix">25€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--2">
                     <div class="container-name">
                     <p class="item-name"><b>Velouté de légumes d'antan</b></p>
                     <p>Carotte, panais, topinambour</p>
@@ -57,7 +57,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--3">
                     <div class="container-name">
                     <p class="item-name"><b>Soupe à l'oignon</b></p>
                     <p>Revisitée</p>
@@ -66,12 +66,13 @@
                         <p class="prix">20€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--4">
                     <div class="container-name">
                     <p class="item-name"><b>Coquilles Saint-Jacques</b></p>
                     <p>Accompagnées d'une purée de panais</p>
@@ -80,7 +81,7 @@
                         <p class="prix">40€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--5">
                     <div class="container-name">
                     <p class="item-name"><b>Magret de canard</b></p>
                     <p>Et parmentier de pommes de terre</p>
@@ -89,7 +90,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--6">
                     <div class="container-name">
                     <p class="item-name"><b>Pigeonneau d’Ille-et-Vilaine</b></p>
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -98,30 +99,31 @@
                         <p class="prix">44€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--7">
                     <div class="container-name">
                     <p class="item-name"><b>Pétales de violettes glacés</b></p>
                     <p>Et purée de noisettes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">18€</p>
-  
-</div>                  </div>
-                <div class="menu-item">
+                    </div>                  
+                </div>
+                <div class="menu-item menu-item--8">
                     <div class="container-name">
                     <p class="item-name"><b>Fondant au chocolat</b></p>
                     <p>Revisité</p>
                     </div>
                     <div class="container-price">
-                        <p class="prix">22€</p>
-  
-</div>                  </div>
-                <div class="menu-item">
+                        <p class="prix">22€</p> 
+                    </div>                  
+                </div>
+                <div class="menu-item menu-item--9">
                     <div class="container-name">
                     <p class="item-name"><b>Millefeuille croustillant</b></p>
                     <p>Myrtilles et pâte d’amande</p>
