--- a/menu1.html
+++ b/menu1.html
@@ -34,12 +34,12 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
 
-            <div class="menu-section">
+            <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--1">
                     <div class="container-name">
                     <p class="item-name">Fricassée d'escargot</p>
                     <p>Au piment d'Espelette </p>
@@ -48,7 +48,7 @@
                         <p class="prix">25€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--2">
                     <div class="container-name">
                     <p class="item-name">Foie gras de canard mi-cuit</p>
                     <p>Et ses copeaux de truffe noire</p>
@@ -57,7 +57,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--3">
                     <div class="container-name">
                     <p class="item-name">Oeuf au plat</p>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -66,12 +66,13 @@
                         <p class="prix">20€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--4">
                     <div class="container-name">
                     <p class="item-name">Filet de boeuf aux herbes</p>
                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -80,7 +81,7 @@
                         <p class="prix">40€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--5">
                     <div class="container-name">
                     <p class="item-name">Parmentier de queue de boeuf</p>
                     <p>À la truffe noire sur sa purée de panais</p>
@@ -89,7 +90,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--6">
                     <div class="container-name">
                     <p class="item-name">Filet de turbot</p>
                     <p>Aux agrumes</p>
@@ -98,12 +99,13 @@
                         <p class="prix">44€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--7">
                     <div class="container-name">
                     <p class="item-name">Paris-Brest</p>
                     <p>Revisité</p>
@@ -112,7 +114,7 @@
                         <p class="prix">18€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--8">
                     <div class="container-name">
                     <p class="item-name">Macaron au chocolat d'exception </p>
                     <p>Et glace à la vanille de Madagascar</p>
@@ -121,7 +123,7 @@
                         <p class="prix">22€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--9">
                     <div class="container-name">
                     <p class="item-name">Mousse au chocolat </p>
                     <p>Au piment d'Espelette et à la truffe noire</p>
