--- a/menu4.html
+++ b/menu4.html
@@ -34,12 +34,12 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
 
-            <div class="menu-section">
+            <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--1">
                     <div class="container-name">
                     <p class="item-name"><b>Tartare de thon</b></p>
                     <p>Assaisonné au yuzu</p>
@@ -48,7 +48,7 @@
                         <p class="prix">25€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--2">
                     <div class="container-name">
                     <p class="item-name"><b>Bouchée de homard croustillant </b></p>
                     <p>Et sa farandole de petits légumes</p>
@@ -57,7 +57,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--3">
                     <div class="container-name">
                     <p class="item-name"><b>Velouté de cèpes </b></p>
                     <p>Aux truffes</p>
@@ -66,12 +66,13 @@
                         <p class="prix">20€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
                 <h4>PLATS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--4">
                     <div class="container-name">
                     <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
                     <p>Et sa crème de truffe</p>
@@ -80,7 +81,7 @@
                         <p class="prix">40€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--5">
                     <div class="container-name">
                     <p class="item-name"><b>Langouste rôtie</b></p>
                     <p>Et ses légumes de saison</p>
@@ -89,7 +90,7 @@
                         <p class="prix">35€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--6">
                     <div class="container-name">
                     <p class="item-name"><b>Côte de boeuf Angus</b></p>
                     <p>Et sa purée de panais</p>
@@ -98,12 +99,13 @@
                         <p class="prix">44€</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
                 <h4>DESSERTS</h4>
                 <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--7">
                     <div class="container-name">
                     <p class="item-name"><b>Farandole de desserts</b></p>
                     <p>Du chef</p>
@@ -112,7 +114,7 @@
                         <p class="prix">18€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--8">
                     <div class="container-name">
                     <p class="item-name"><b>Crème brulée</b></p>
                     <p>Revisitée</p>
@@ -121,7 +123,7 @@
                         <p class="prix">22€</p>
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item menu-item--9">
                     <div class="container-name">
                     <p class="item-name"><b>Tiramisu</b></p>
                     <p>À la noisette</p>
