--- a/menu1.html
+++ b/menu1.html
@@ -40,6 +40,7 @@
                 <div id="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--1">
+
                     <div class="container-name">
                     <p class="item-name">Fricassée d'escargot</p>
                     <p>Au piment d'Espelette </p>
@@ -47,8 +48,12 @@
                     <div class="container-price">
                         <p class="prix">25€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--2">
+
                     <div class="container-name">
                     <p class="item-name">Foie gras de canard mi-cuit</p>
                     <p>Et ses copeaux de truffe noire</p>
@@ -56,14 +61,21 @@
                     <div class="container-price">
                         <p class="prix">35€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--3">
+
                     <div class="container-name">
                     <p class="item-name">Oeuf au plat</p>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -73,6 +85,7 @@
                 <div id="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--4">
+
                     <div class="container-name">
                     <p class="item-name">Filet de boeuf aux herbes</p>
                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -80,8 +93,12 @@
                     <div class="container-price">
                         <p class="prix">40€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--5">
+
                     <div class="container-name">
                     <p class="item-name">Parmentier de queue de boeuf</p>
                     <p>À la truffe noire sur sa purée de panais</p>
@@ -89,14 +106,21 @@
                     <div class="container-price">
                         <p class="prix">35€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--6">
+
                     <div class="container-name">
                     <p class="item-name">Filet de turbot</p>
                     <p>Aux agrumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -106,6 +130,7 @@
                 <div id="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--7">
+
                     <div class="container-name">
                     <p class="item-name">Paris-Brest</p>
                     <p>Revisité</p>
@@ -113,8 +138,12 @@
                     <div class="container-price">
                         <p class="prix">18€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--8">
+
                     <div class="container-name">
                     <p class="item-name">Macaron au chocolat d'exception </p>
                     <p>Et glace à la vanille de Madagascar</p>
@@ -122,14 +151,21 @@
                     <div class="container-price">
                         <p class="prix">22€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--9">
+
                     <div class="container-name">
                     <p class="item-name">Mousse au chocolat </p>
                     <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
