Animation check finie sur menu1

--- a/menu1.html
+++ b/menu1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
@@ -7,26 +8,28 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
     <title>OhMyFood - La palette du goût</title>
 </head>
+
 <body>
     <header>
         <div class="menu-header">
-        <a href="index.html">
-            <div class="backarrow">
-                <i class="fa-solid fa-arrow-left"></i>
+            <a href="index.html">
+                <div class="backarrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+            </a>
+            <div id="header-logo-menu">
+                <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
             </div>
-        </a>
-        <div id="header-logo-menu">
-        <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
         </div>
-    </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+            <img src="Maquettes Ohmyfood\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg">
         </div>
         <div class="menu">
             <div class="menu-title">
@@ -36,14 +39,14 @@
 
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
-                <h4>ENTREES</h4>
-                <div id="borderbottom"></div>
+                    <h4>ENTREES</h4>
+                    <div id="borderbottom"></div>
                 </div>
-                <div class="menu-item menu-item--1">
 
+                <div class="menu-item menu-item--1">
                     <div class="container-name">
-                    <p class="item-name">Fricassée d'escargot</p>
-                    <p>Au piment d'Espelette </p>
+                        <p class="item-name">Fricassée d'escargot</p>
+                        <p>Au piment d'Espelette </p>
                     </div>
                     <div class="container-price">
                         <p class="prix">25€</p>
@@ -52,11 +55,12 @@
                         <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
+                
                 <div class="menu-item menu-item--2">
 
                     <div class="container-name">
-                    <p class="item-name">Foie gras de canard mi-cuit</p>
-                    <p>Et ses copeaux de truffe noire</p>
+                        <p class="item-name">Foie gras de canard mi-cuit</p>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -68,8 +72,8 @@
                 <div class="menu-item menu-item--3">
 
                     <div class="container-name">
-                    <p class="item-name">Oeuf au plat</p>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p class="item-name">Oeuf au plat</p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
@@ -81,14 +85,14 @@
             </div>
             <div class="menu-section menu-section--1">
                 <div class="menu-section-title">
-                <h4>PLATS</h4>
-                <div id="borderbottom"></div>
+                    <h4>PLATS</h4>
+                    <div id="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--4">
 
                     <div class="container-name">
-                    <p class="item-name">Filet de boeuf aux herbes</p>
-                    <p>Accompagné de sa ribambelle de légumes</p>
+                        <p class="item-name">Filet de boeuf aux herbes</p>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">40€</p>
@@ -100,8 +104,8 @@
                 <div class="menu-item menu-item--5">
 
                     <div class="container-name">
-                    <p class="item-name">Parmentier de queue de boeuf</p>
-                    <p>À la truffe noire sur sa purée de panais</p>
+                        <p class="item-name">Parmentier de queue de boeuf</p>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
@@ -113,8 +117,8 @@
                 <div class="menu-item menu-item--6">
 
                     <div class="container-name">
-                    <p class="item-name">Filet de turbot</p>
-                    <p>Aux agrumes</p>
+                        <p class="item-name">Filet de turbot</p>
+                        <p>Aux agrumes</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
@@ -126,14 +130,14 @@
             </div>
             <div class="menu-section menu-section--2">
                 <div class="menu-section-title">
-                <h4>DESSERTS</h4>
-                <div id="borderbottom"></div>
+                    <h4>DESSERTS</h4>
+                    <div id="borderbottom"></div>
                 </div>
                 <div class="menu-item menu-item--7">
 
                     <div class="container-name">
-                    <p class="item-name">Paris-Brest</p>
-                    <p>Revisité</p>
+                        <p class="item-name">Paris-Brest</p>
+                        <p>Revisité</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">18€</p>
@@ -145,8 +149,8 @@
                 <div class="menu-item menu-item--8">
 
                     <div class="container-name">
-                    <p class="item-name">Macaron au chocolat d'exception </p>
-                    <p>Et glace à la vanille de Madagascar</p>
+                        <p class="item-name">Macaron au chocolat d'exception </p>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">22€</p>
@@ -158,8 +162,8 @@
                 <div class="menu-item menu-item--9">
 
                     <div class="container-name">
-                    <p class="item-name">Mousse au chocolat </p>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
+                        <p class="item-name">Mousse au chocolat </p>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
@@ -175,14 +179,18 @@
     <footer>
         <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
+            <i class="fa-solid fa-utensils"></i>
+            <!--icone fourchette-->
             <p>Proposer un restaurant</p>
         </div>
         <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
+            <i class="fa-solid fa-handshake-angle"></i>
+            <!--icone serrage de mains-->
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        <a href="mailto:contact@ohmyfood.fr">
+            <p>Contact</p>
+        </a>
     </footer>
 </body>
