Animation check entièrement fidèle à la maquette sur toutes les pages

--- a/menu4.html
+++ b/menu4.html
@@ -47,6 +47,9 @@
                     <div class="container-price">
                         <p class="prix">25€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--2">
                     <div class="container-name">
@@ -56,6 +59,9 @@
                     <div class="container-price">
                         <p class="prix">35€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--3">
                     <div class="container-name">
@@ -64,6 +70,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">20€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -80,6 +89,9 @@
                     <div class="container-price">
                         <p class="prix">40€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--5">
                     <div class="container-name">
@@ -89,6 +101,9 @@
                     <div class="container-price">
                         <p class="prix">35€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--6">
                     <div class="container-name">
@@ -97,6 +112,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -113,6 +131,9 @@
                     <div class="container-price">
                         <p class="prix">18€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--8">
                     <div class="container-name">
@@ -122,6 +143,9 @@
                     <div class="container-price">
                         <p class="prix">22€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--9">
                     <div class="container-name">
@@ -130,6 +154,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
