--- a/menu2.html
+++ b/menu2.html
@@ -47,6 +47,9 @@
                     <div class="container-price">
                         <p class="prix">25€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--2">
                     <div class="container-name">
@@ -55,6 +58,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
                 <div class="menu-item menu-item--3">
@@ -65,6 +71,9 @@
                     <div class="container-price">
                         <p class="prix">20€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--4">
                     <div class="container-name">
@@ -73,6 +82,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">35€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -89,6 +101,9 @@
                     <div class="container-price">
                         <p class="prix">40€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--6">
                     <div class="container-name">
@@ -98,6 +113,9 @@
                     <div class="container-price">
                         <p class="prix">35€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--7">
                     <div class="container-name">
@@ -106,6 +124,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">44€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
@@ -122,6 +143,9 @@
                     <div class="container-price">
                         <p class="prix">18€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--9">
                     <div class="container-name">
@@ -131,6 +155,9 @@
                     <div class="container-price">
                         <p class="prix">22€</p>
                     </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    </div>
                 </div>
                 <div class="menu-item menu-item--10">
                     <div class="container-name">
@@ -139,6 +166,9 @@
                     </div>
                     <div class="container-price">
                         <p class="prix">23€</p>
+                    </div>
+                    <div class="checkmark">
+                        <i class="fa-regular fa-circle-check fa-lg"></i>
                     </div>
                 </div>
             </div>
