Animation coeur sur les pages de menus

--- a/menu1.html
+++ b/menu1.html
@@ -34,7 +34,14 @@
         <div class="menu">
             <div class="menu-title">
                 <h1>La palette du goût</h1>
+                <div class="hearts">
+                <div class="heartbase__menu">
                 <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="heartbg__menu">
+                <i class="fa-solid fa-heart"></i>
+                </div>
+                </div>
             </div>
 
             <div class="menu-section menu-section--0">
