--- a/menu4.html
+++ b/menu4.html
@@ -31,7 +31,14 @@
         <div class="menu">
             <div class="menu-title">
                 <h1>Le délice des sens</h1>
+                <div class="hearts">
+                <div class="heartbase__menu">
                 <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="heartbg__menu">
+                <i class="fa-solid fa-heart"></i>
+                </div>
+                </div>
             </div>
 
             <div class="menu-section menu-section--0">
