--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
     <!-- Header -->
     <header>
+        <div class="menu-header">
         <div id="header-logo">
         <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+        </div>
         </div>
     </header>
     <main>
@@ -48,6 +50,7 @@
         <section>
             <div id="fonctionnement">
                 <h2>Fonctionnement</h2>
+                <div class="steps--wrapper">
                 <div class="steps">
                     <p class="number">1</p>
                     <i class="fa-solid fa-mobile-screen-button"></i>
@@ -63,6 +66,7 @@
                     <i class="fa-solid fa-store"></i>
                     <p>Dégustez au restaurant</p>
                 </div>
+                </div>
             </div>
         </section>
 
@@ -70,6 +74,7 @@
         <section>
             <div id="restaurants">
                 <h2>Restaurants</h2>
+                <div class="restaurants--wrapper">
                 <a href="menu1.html">
                 <div class="resto-card">
                     <div class="card-img-div">
@@ -141,13 +146,15 @@
                     </div>
                 </div>
                 </a>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
         <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
-        <div class="footerdiv">
+        <div class="footer__txt">
+            <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
             <p>Proposer un restaurant</p>
         </div>
@@ -157,5 +164,6 @@
         </div>
         <p>Mentions légales</p>
         <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
