--- a/menu1.html
+++ b/menu1.html
@@ -22,9 +22,9 @@
                     <i class="fa-solid fa-arrow-left"></i>
                 </div>
             </a>
-            <div id="header-logo-menu">
+            <div id="header-logo">
                 <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
-            </div>
+                </div>
         </div>
     </header>
     <main id="menu-main">
@@ -43,7 +43,7 @@
                 </div>
                 </div>
             </div>
-
+            <div class="menu-section--wrapper">
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                     <h4>ENTREES</h4>
@@ -180,24 +180,23 @@
                     </div>
                 </div>
             </div>
+            </div>
             <button class="btn">Commander</button>
         </div>
     </main>
     <footer>
         <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
-        <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i>
-            <!--icone fourchette-->
+        <div class="footer__txt">
+            <div class="footerdiv">
+            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
             <p>Proposer un restaurant</p>
         </div>
         <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i>
-            <!--icone serrage de mains-->
+            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr">
-            <p>Contact</p>
-        </a>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
