--- a/menu4.html
+++ b/menu4.html
@@ -19,9 +19,9 @@
                 <i class="fa-solid fa-arrow-left"></i>
             </div>
         </a>
-        <div id="header-logo-menu">
-        <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
-        </div>
+        <div id="header-logo">
+            <img id="logo" src="Maquettes Ohmyfood\images\logo\ohmyfood.png" alt="Logo">
+            </div>
     </div>
     </header>
     <main id="menu-main">
@@ -40,7 +40,7 @@
                 </div>
                 </div>
             </div>
-
+            <div class="menu-section--wrapper">
             <div class="menu-section menu-section--0">
                 <div class="menu-section-title">
                 <h4>ENTREES</h4>
@@ -167,12 +167,14 @@
                     </div>
                 </div>
             </div>
+            </div>
             <button class="btn">Commander</button>
         </div>
     </main>
     <footer>
         <img id="logosmall" src="Maquettes Ohmyfood\images\logo\ohmyfood@2xwhite.png" alt="Logo small">
-        <div class="footerdiv">
+        <div class="footer__txt">
+            <div class="footerdiv">
             <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
             <p>Proposer un restaurant</p>
         </div>
@@ -182,5 +184,6 @@
         </div>
         <p>Mentions légales</p>
         <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
